--- a/style.css
+++ b/style.css
@@ -227,3 +227,76 @@ p::selection{
     background-color: #f63232;
     color: white;
 }
+
+/**********************media query *************************/
+/* applies on 1400 and less  */
+@media screen and (max-width: 1400px){
+    
+    .banner .welcome h2{
+        font-size: 60px;
+    }
+
+    .nav-bar li{
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width: 960px){
+    
+    .banner .welcome h2{
+        font-size: 40px;
+    }
+
+}
+
+@media screen and (max-width: 700px){
+    
+    .banner .welcome{
+        position: relative;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .banner .welcome br{
+        display: none;
+    }
+
+    .banner .welcome h2{
+        font-size: 25px;
+    }
+    
+    .banner .welcome span{
+        font-size: 1em; /* reset it */
+    }
+
+    /* makes images show as rows */
+    .main-images li{
+        width: 100%;
+        margin: 20px auto;
+        display: block;
+    }
+
+}
+
+
+
+@media screen and (max-width: 560px){
+    
+    .nav-bar li{
+        font-size: 20px;
+        position: relative;
+        display: block; /* makes navigation vertical */
+        width: 100%;
+        margin: 12px 0;
+    }
+
+    .nav-bar{
+        top: 0;
+    }
+
+    header{
+        position: relative;
+    }
+
+}
